--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^12.23.15",
+    "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.3"
+    "react-icons": "^5.5.0",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.9.1",
+    "tsparticles-basic": "^2.12.0",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-preset-links": "^2.12.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
