--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-tsparticles": "^2.12.2",
+    "swiper": "^11.2.10",
     "tsparticles": "^3.9.1",
     "tsparticles-basic": "^2.12.0",
     "tsparticles-engine": "^2.12.0",
